fix rounded app-layout issue, trying to fix screenshots 3

--- a/frontend/src/layout/navigation-3000/Navigation.scss
+++ b/frontend/src/layout/navigation-3000/Navigation.scss
@@ -712,8 +712,7 @@
     overflow: hidden;
 
     .storybook-test-runner & {
-        height: auto;
-        overflow: visible;
+        height: fit-content;
     }
 
     /* Mobile layout - single column with overlay nav */
